syntax = "proto3";

package proto.stream;

option go_package = "grpc_interceptor/proto/stream;stream";
option java_multiple_files = true;
option java_package = "proto.stream";

service Stream {
	//服务端流式RPC
	rpc List(StreamRequest) returns (stream StreamResponse);
	//客户端流式RPC
	rpc Record(stream StreamRequest) returns (StreamResponse);
	//双向流式RPC
	rpc Route(stream StreamRequest) returns (stream StreamResponse);
}

message StreamPoint {
	string name = 1;
	int32 value = 2;
}
message StreamRequest {
	StreamPoint pt = 1;
}
message StreamResponse {
	StreamPoint pt = 1;
}

